update link in slides

--- a/class/1-getting-started/index.html
+++ b/class/1-getting-started/index.html
@@ -607,7 +607,7 @@ class: center, inverse, middle
 
 # Your project starts now!
 
-# [View project Ideas](https://docs.google.com/presentation/d/1Q9f68tm4JWdi2MdSozqXgYtxrGr6VKqO/edit?usp=sharing)
+# [View project Ideas](https://docs.google.com/presentation/d/1bNnsKWkU8FwGHIL_jK72ilXsvhZhr98Q/edit?usp=sharing)
 
 ---
 
@@ -652,7 +652,7 @@ class: inverse
 
 2. Stand up, meet each other, (maybe form teams?...use [this sheet](https://docs.google.com/spreadsheets/d/1Y-ApfpujwbywjL05KCmUo-AzZqRheqq7_M_vLuEnjt0/edit?usp=sharing)) 
 
-<div class="countdown" id="timer_6c55a05b" data-warn-when="30" data-update-every="1" tabindex="0" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;">
+<div class="countdown" id="timer_11ec1560" data-warn-when="30" data-update-every="1" tabindex="0" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -735,7 +735,7 @@ class: center, middle, inverse
 
 class: inverse
 
-<div class="countdown" id="timer_0dd7550a" data-warn-when="30" data-update-every="15" data-blink-colon="true" tabindex="0" style="bottom:0;left:0;font-size:2em;">
+<div class="countdown" id="timer_75bde5e8" data-warn-when="30" data-update-every="15" data-blink-colon="true" tabindex="0" style="bottom:0;left:0;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -862,7 +862,7 @@ wiki_randomfact()
 
 
 ```
-#&gt; [1] "Did you know that shortly before sports shooter William Riedell was to compete in the 1936 Olympics, he had his pistols confiscated by the New York police because the precinct chief had decided there were \"too many guns\"? (Courtesy of Wikipedia)"
+#&gt; [1] "Did you know that on May 12 in 2008 – In Postville, Iowa, U.S. Immigration and Customs Enforcement conducted the largest-ever raid of a workplace and arrested nearly 400 immigrants for identity theft and document fraud. (Courtesy of Wikipedia)"
 ```
 
 ---
@@ -904,7 +904,7 @@ wikifacts::wiki_randomfact()
 ```
 
 ```
-#&gt; [1] "Did you know that on February 18 in 1268 – The Battle of Wesenberg took place between Novgorodian and Pskovian forces against the Livonian Order and its allies, ending with Russian forces retreating from Danish Estonia. (Courtesy of Wikipedia)"
+#&gt; [1] "Did you know that on April 28 in 2008 – The Trump International Hotel and Tower in Chicago, the world's highest residence above ground-level at the time (1,389 feet (423 m)), held its full service grand opening. (Courtesy of Wikipedia)"
 ```
 
 ---
