--- a/class/3-quarto-plotting/index.html
+++ b/class/3-quarto-plotting/index.html
@@ -636,7 +636,7 @@ knitr::opts_chunk$set(
 
 class: inverse
 
-<div class="countdown" id="timer_65022464" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_65044d1b" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -664,7 +664,7 @@ class: inverse
 
 # Quiz 1
 
-<div class="countdown" id="timer_6502266b" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
+<div class="countdown" id="timer_65044eec" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1043,7 +1043,7 @@ class: middle, inverse
 
 .rightcol[
 
-<div class="countdown" id="timer_650225c4" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_65044fb2" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
