--- a/class/6-conjoint-questions/index.html
+++ b/class/6-conjoint-questions/index.html
@@ -883,26 +883,26 @@ Any combination of attributes can be shown in each choice question
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
@@ -924,27 +924,27 @@ Any combination of attributes can be shown in each choice question
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -972,7 +972,7 @@ One attribute is used as the "label" - choice options are fixed according to the
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
@@ -982,8 +982,8 @@ One attribute is used as the "label" - choice options are fixed according to the
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1004,7 +1004,7 @@ One attribute is used as the "label" - choice options are fixed according to the
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
@@ -1044,29 +1044,29 @@ A "none" option means they can choose an "other" option
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
@@ -1090,15 +1090,15 @@ A "none" option means they can choose an "other" option
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
@@ -1106,13 +1106,13 @@ A "none" option means they can choose an "other" option
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
@@ -1159,8 +1159,7 @@ Sometimes you may want to not allow a specific combination of features  -  use `
 
 class: inverse
 
-<div class="countdown" id="timer_689706bc" data-warn-when="15" data-update-every="1" tabindex="0" style="top:0;right:0;font-size:2em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<div class="countdown" id="timer_6527c515" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1172,7 +1171,7 @@ class: inverse
 - Include a "none" option (outside good) or not?
 - Include restrictions?
 
-2. Edit the `make_choice_questions.R` file to design your choice questions.
+2. Edit the `make-choice-questions.R` file to design your choice questions.
 
 ---
 
@@ -1255,9 +1254,9 @@ df
 
 ```
 #&gt;   profileID altID price fuelEconomy accelTime powertrain
-#&gt; 1         2     1    20          20         6   Gasoline
-#&gt; 2        38     2    20          20         7   Electric
-#&gt; 3         5     3    20          25         6   Gasoline
+#&gt; 1         7     1    15          30         6   Gasoline
+#&gt; 2         8     2    20          30         6   Gasoline
+#&gt; 3        16     3    15          30         7   Gasoline
 ```
 
 
@@ -1267,7 +1266,7 @@ df_json
 ```
 
 ```
-#&gt; {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["profileID","altID","price","fuelEconomy","accelTime","powertrain"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3]}},"value":[{"type":"integer","attributes":{},"value":[2,38,5]},{"type":"integer","attributes":{},"value":[1,2,3]},{"type":"double","attributes":{},"value":[20,20,20]},{"type":"double","attributes":{},"value":[20,20,25]},{"type":"double","attributes":{},"value":[6,7,6]},{"type":"integer","attributes":{"levels":{"type":"character","attributes":{},"value":["Gasoline","Electric"]},"class":{"type":"character","attributes":{},"value":["factor"]}},"value":[1,2,1]}]}
+#&gt; {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["profileID","altID","price","fuelEconomy","accelTime","powertrain"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3]}},"value":[{"type":"integer","attributes":{},"value":[7,8,16]},{"type":"integer","attributes":{},"value":[1,2,3]},{"type":"double","attributes":{},"value":[15,20,15]},{"type":"double","attributes":{},"value":[30,30,30]},{"type":"double","attributes":{},"value":[6,6,7]},{"type":"integer","attributes":{"levels":{"type":"character","attributes":{},"value":["Gasoline","Electric"]},"class":{"type":"character","attributes":{},"value":["factor"]}},"value":[1,1,1]}]}
 ```
 
 ---
@@ -1308,9 +1307,9 @@ Use RMarkdown formatting to display content in each alternative
 
 **Option 1**
 
-**Price**: $ 20&lt;br&gt;
+**Price**: $ 15&lt;br&gt;
 **Powertrain**: $ Gasoline&lt;br&gt;
-**Fuel Economy**: 20 mpg&lt;br&gt;
+**Fuel Economy**: 30 mpg&lt;br&gt;
 **0-60 Accel. Time**: 6 s
 
 ]
@@ -1362,26 +1361,26 @@ kable(t(alts))
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy (mpg): &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time (s): &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1404,8 +1403,7 @@ class: center
 
 class: inverse
 
-<div class="countdown" id="timer_4bb71bd3" data-warn-when="15" data-update-every="1" tabindex="0" style="top:0;right:0;font-size:2em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<div class="countdown" id="timer_6527c670" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1426,8 +1424,7 @@ class: inverse
 
 # Quiz 2
 
-<div class="countdown" id="timer_e3a1a72b" data-warn-when="30" data-update-every="1" tabindex="0" style="bottom:0;left:0;font-size:4em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<div class="countdown" id="timer_6527c831" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
